# dantectf-21

./: README.md
challenges/binary/IN_ciacco/: .dockerignore  Dockerfile  Makefile  chall  chall-server
challenges/binary/IN_ciacco/src/: chall-server.c  chall.c  checks.c  checks.h
challenges/binary/PA_cacciaguida/: Makefile  chall  chall.c
challenges/binary/PU_casella/: Makefile  chall  chall.c
challenges/crypto/IN_paolo-e-francesca/: chall.py  output.txt
challenges/hardware/morse/: gen_code.py
challenges/hardware/morse/arduino/: arduino.ino  arduino_leonardo.hex  arduino_uno_nano.hex
challenges/hardware/morse/esp32/: esp32.ino
challenges/hardware/morse/esp8266/: esp8266.ino
challenges/hardware/morse/rp2040/: CMakeLists.txt  build.sh  morse.c  morse.pio  pio_morse.uf2
challenges/misc/farinata/: .gitignore  Makefile  gen_flag.py
challenges/misc/giotto/: chall.txt  gen_chall.py
challenges/misc/orlando/: Dockerfile  build.sh  go.mod  main.go  quotes.go
challenges/web/: Dockerfile  build_docker.sh
challenges/web/challenges/inferno/: index.html  main.css  main.js
challenges/web/challenges/paradiso/: safe.php
challenges/web/challenges/paradiso/challenge/: flag.php  index.php  login.php  main.css
challenges/web/challenges/purgatorio/: getflag.php  index.html  main.css  nope.html
challenges/web/config/: nginx.conf
